Fix compact biome not generating with void air settings